Stop Autocomplete from jumping around

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -315,7 +315,7 @@ body {
   cursor: default;
   font-size: 14px;
   background: @black2;
-  width: 300px; // keeps autocomplete appearing when Creating
+  width: 96px; // keeps autocomplete appearing when Creating
 
   .types {
     float: right;
@@ -324,19 +324,14 @@ body {
     font-size: 80%;
   }
   form {
-    // makes the form takes up no space in the DOM, meaning we don't
-    // expand the top-level
-    position: absolute;
-    margin-top: -15px; // account for the space of both input boxes
-
     #search-container {
       position: relative;
       input {
-        width: 300px;
+        width: 96px;
       }
       #entryBox {
         z-index: 20;
-        width: 300px;
+        width: 96px;
         position: relative;
         color: black;
         background: transparent;
@@ -354,6 +349,7 @@ body {
     overflow-y: hidden;
     max-height: 100px;
     font-size: 85%;
+    width: 300px;
 
     .autocomplete-item {
       background: @black2;
